--- a/Scripts/01_data_generation/requirements.txt
+++ b/Scripts/01_data_generation/requirements.txt
@@ -2,31 +2,31 @@
 # Python 3.8 or higher required
 
 # Database connectivity
-psycopg2-binary==2.9.7
+psycopg2-binary>=2.9.0,<3.0.0
 
 # Environment variables management
-python-dotenv==1.0.0
+python-dotenv>=1.0.0,<2.0.0
 
 # Data generation and fake data
-Faker==19.6.2
+Faker>=18.0.0,<22.0.0
 
 # Data manipulation and analysis
-pandas==2.0.3
-numpy==1.24.3
+pandas>=2.0.0,<3.0.0
+numpy>=1.21.0,<2.0.0
 
 # Date and time handling
-python-dateutil==2.8.2
+python-dateutil>=2.8.0,<3.0.0
 
 # SQLAlchemy for potential database operations
-SQLAlchemy==2.0.23
+SQLAlchemy>=2.0.0,<3.0.0
 
 # Snowflake connector for future ETL processes
-snowflake-connector-python==3.4.0
-snowflake-sqlalchemy==1.5.0
+snowflake-connector-python>=3.0.0,<4.0.0
+snowflake-sqlalchemy>=1.4.0,<2.0.0
 
 # Additional utilities
-PyYAML==6.0
-Jinja2==3.1.2
+PyYAML>=6.0,<7.0
+Jinja2>=3.1.0,<4.0.0
 
 # Development and debugging (optional)
-ipython==8.14.0
+ipython>=8.0.0,<9.0.0
